--- a/style.css
+++ b/style.css
@@ -1,1 +1,86 @@
+* {
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
+body {
+    background-color: #F3F3F3;
+}
+
+.conteudo {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.principal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.mochila {
+    width: 200px;
+    height: 200px;
+    background-image: url(./images/Children\ preparing\ their\ backpack-amico\ \(1\).svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.adicionar {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.adicionar label {
+    flex-basis: 100%;
+}
+
+.adicionar input[type="text"],
+.adicionar input[type="number"] {
+    flex-basis: 100%;
+    border: none;
+    padding: 10px;
+    background-color: #FDFDFD;
+}
+
+.adicionar input[type="submit"] {
+    border: none;
+    padding: 10px;
+    background-color: #0099FF;
+    color: #FDFDFD;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.adicionar input[type="submit"]:hover {
+    background-color: #0077CC;
+}
+
+.lista {
+    list-style: none;
+}
+
+.item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #FFFFFF;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}
+
+.item strong {
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-right: 10px;
+}
