border radius style

--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ body {
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .add label {
@@ -50,15 +52,23 @@ body {
     border: none;
     padding: 10px;
     background-color: #FDFDFD;
+    border-radius: 20px;
 }
 
 .add input[type="submit"] {
+    font-size: .8rem;
     border: none;
-    padding: 10px;
+    padding: 12px;
     background-color: #0099FF;
     color: #FDFDFD;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+
+
 }
 
 .add input[type="submit"]:hover {
@@ -76,7 +86,8 @@ body {
     background-color: #FFFFFF;
     padding: 10px;
     margin-bottom: 10px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
 
 .item strong {
