--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ body {
     padding: 10px;
     background-color: #FDFDFD;
     border-radius: 20px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+
 }
 
 .add input[type="submit"] {
@@ -81,17 +83,31 @@ body {
 
 .item {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: #FFFFFF;
     padding: 10px;
-    margin-bottom: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    padding: 0.6em 2em;
+    background: #FFFFFF;
     border-radius: 10px;
+    margin: 0 0 1em ;
+    width: 100%;
+    box-sizing: border-box;
+    display: inline-flex;
+    align-items: center;
+    gap: 1em;
+    font-size: 20px;
+    
 }
 
 .item strong {
-    font-weight: bold;
+    font-weight: 400;
     font-size: 1.2em;
     margin-right: 10px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    Background: #1a98f3;
 }
